# banshee

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  org.gnome.banshee.gschema.xml.in
po/: POTFILES.in  cs.po  sort-potfiles  sr.po  sr@latin.po
src/Backends/Banshee.Gnome/: Banshee.Gnome.addin.xml  Banshee.Gnome.csproj  Makefile.am
src/Backends/Banshee.Gnome/Banshee.GnomeBackend/: GSettingsConfigurationClient.cs  GnomeService.cs  ProxyConfiguration.cs
src/Core/Banshee.Services/Banshee.ServiceStack/: Application.cs
src/Core/Banshee.ThickClient/: Banshee.ThickClient.csproj
src/Core/Banshee.ThickClient/Banshee.Gui/: GtkBaseClient.cs
src/Core/Banshee.WebBrowser/Banshee.WebSource/: WebSource.cs
src/Dap/Banshee.Dap.AppleDevice/Banshee.Dap.AppleDevice/: AppleDeviceSource.cs
src/Extensions/Banshee.LibraryWatcher/: Banshee.LibraryWatcher.csproj
src/Extensions/Banshee.PlayQueue/Banshee.PlayQueue/: PlayQueueSource.cs
src/Extensions/Banshee.PlayerMigration/Banshee.PlayerMigration/: ItunesPlayerImportSource.cs
src/Libraries/Migo/: Makefile.am
src/Libraries/Migo/Migo.Net/: AsyncWebClient.cs
src/Libraries/Migo/Migo.Syndication/: AtomParser.cs  FeedEnclosure.cs  FeedParser.cs  FeedUpdateTask.cs  RssParser.cs  Youtube.cs
